fix [#29832] Weightpainting with "x-mirror" and "auto normalize" fails for center bones

normalize function simply wasn't called on the mirror vertex.

also fix 3 other bugs / inconsistencies

* when mirror is enabled, center verts get themselves as the mirror vertex, wpaint code didn't check for this case, mirroring the vertex to it self (would work, but unneeded).
* normalizing after painting would scale the active weight too, now keep the painted weight and adjust others when normalizing.
* VP_ONLYVGROUP wasn't respected for mirror (mirror vertex group would always be added).